# financial-agent

./: .gitignore  accounts.csv  docker-compose.yml  rough.py
chatbot_api/: pyproject.toml
chatbot_api/src/chains/: finance_review_chain.py  hospital_cypher_chain.py
chatbot_api/src/chatbot_api.egg-info/: PKG-INFO  requires.txt
chroma_data/: chroma.sqlite3
data_bank/: accounts.csv  bank_review.csv  branches.csv  customers.csv  employees.csv  loans.csv  reviews.csv  transactions.csv
data_bank copy/: review.csv  reviews.csv
finance_neo4j_etl/: pyproject.toml
finance_neo4j_etl/src/: entrypoint.sh  finance_csv_write.py
hospital_neo4j_etl/src/: entrypoint.sh
